Plaid webhook signature verification + transaction sync hardening
Adds PlaidWebhookVerifier (JWT signature verification against Plaid's
webhook key endpoint) and wires it through PlaidWebhookService /
PlaidWebhookController. PlaidService gains webhookVerificationKeyGet to
fetch the public JWK keyed off the JWT's kid claim, with caching left to
the caller.

Touches surrounding areas to support the new flow:
- TransactionSyncController / TransactionSyncService: wire webhook-driven
  sync path and tighten its error surface.
- SecurityConfig: permit the /webhooks/plaid endpoint without auth (the
  webhook authenticates via the JWT) and add the verifier to the bean
  graph.
- IdentityVerificationService, RequestResponseLoggingFilter,
  ScheduledImportService, PlaidAccountSyncService: incidental cleanups in
  the same area.

Test updates match the new contract (signature verification,
error-handling paths) — PlaidWebhookControllerTest,
PlaidWebhookServiceTest, TransactionSyncControllerTest.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>